<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Search / will display always -->
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="always"
        android:title="@string/action_search"/>

    <!-- Location Found -->
    <item
        android:id="@+id/ic_action_secure"
        android:icon="@drawable/home_icon"
        android:showAsAction="always"
        android:title="@string/action_location_found"/>

    <!-- More -->
    <item
        android:id="@+id/a_More"
        android:icon="@drawable/ic_action_overflow"
        android:showAsAction="always"
        android:title="More">
        <menu>

            <!-- Print -->
            <item
                android:id="@+id/action_print"
                android:icon="@drawable/ic_action_print"
                android:showAsAction="never"
                android:title="@string/action_print"/>

            <!-- SMS -->
            <item
                android:id="@+id/ic_action_chat"
                android:icon="@drawable/ic_action_chat"
                android:showAsAction="never"
                android:title="@string/ic_action_chat"/>

            <!-- EMail -->
            <item
                android:id="@+id/action_email"
                android:icon="@drawable/ic_action_mail"
                android:showAsAction="never"
                android:title="@string/action_email"/>

          <!-- Change Language -->
            <item
                android:id="@+id/action_language"
                android:icon="@drawable/ic_action_refresh"
                android:showAsAction="never"
                android:title="@string/action_language"/>

            <!-- Help -->
            <item
                android:id="@+id/action_help"
                android:icon="@drawable/ic_action_help"
                android:showAsAction="never"
                android:title="@string/action_help"/>

        </menu>
    </item>

</menu>